ihwa/cluster-scope/cert-manager-webhook.validatingwebhookconfiguration.admissionregistration.k8s.io.yaml
# Source: cert-manager/templates/webhook-validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
  labels:
    app: webhook
    app.kubernetes.io/name: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/component: "webhook"
    app.kubernetes.io/version: "v1.13.2"
  annotations:
    cert-manager.io/inject-ca-from-secret: "cert-manager/cert-manager-webhook-ca"
webhooks:
- name: webhook.cert-manager.io
  namespaceSelector:
    matchExpressions:
    - key: "cert-manager.io/disable-validation"
      operator: "NotIn"
      values:
      - "true"
  rules:
  - apiGroups:
    - "cert-manager.io"
    - "acme.cert-manager.io"
    apiVersions:
    - "v1"
    operations:
    - CREATE
    - UPDATE
    resources:
    - "*/*"
  admissionReviewVersions: ["v1"]
  # This webhook only accepts v1 cert-manager resources.
  # Equivalent matchPolicy ensures that non-v1 resource requests are sent to
  # this webhook (after the resources have been converted to v1).
  matchPolicy: Equivalent
  timeoutSeconds: 10
  failurePolicy: Fail
  sideEffects: None
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /validate
